# JS-RAG-Assistant

./: README.md
rag-assistant-python/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
rag-assistant-python/src/rag_assistant/: agent.py  config.py  main.py
rag-assistant-python/src/rag_assistant/knowledge/: what_is_RAG.md
